<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search_locations">Search locations</string>
    <string name="locationValue">%1$s, %2$s</string>
    <string name="temperatureTitle">Temperature</string>
    <string name="averageTemperature">%.1f°C</string>
    <string name="humidityTitle">Humidity</string>
    <string name="humidityValue">%1$d\%%</string>
    <string name="uvTitle">UV</string>
    <string name="uvValue">%.1f</string>
    <string name="windTitle">Wind</string>
    <string name="windValue">%.1f kph, %2$s</string>
    <string name="minTemperature">L: %.1f°C</string>
    <string name="maxTemperature">H: %.1f°C</string>
    <string name="weather_condition_image">Weather Condition Image</string>
    <string name="weather_location_day_background">Weather Location Day Background</string>
    <string name="error_state_image">Error state image</string>
    <string name="error_state_title">Wow, this does not look good…</string>
    <string name="error_state_description">Looks like there is a problem. Please check your connection and try again.</string>
    <string name="empty_state_image">Empty state image</string>
    <string name="empty_state_title">Wow, this looks empty…</string>
    <string name="empty_state_description">Looks like there are no results.</string>
</resources>