<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#362A84">


    <ImageView
        android:id="@+id/emptyStateIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/empty_state_image"
        app:layout_constraintBottom_toTopOf="@+id/emptyStateTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/empty_state_icon" />

    <TextView
        android:id="@+id/emptyStateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_spacing"
        android:gravity="center"
        android:text="@string/empty_state_title"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintBottom_toTopOf="@+id/emptyStateDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyStateIcon" />

    <TextView
        android:id="@+id/emptyStateDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        android:gravity="center"
        android:text="@string/empty_state_description"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emptyStateTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/emptyStateTitle"
        app:layout_constraintTop_toBottomOf="@+id/emptyStateTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>